# cudaQP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  clean.sh  cmake_install.cmake  compile_commands.json  main.c  osqp-targets.cmake
algebra/: Makefile  cmake_install.cmake
benchmarks/: CMakeLists.txt  Makefile  cmake_install.cmake  generate_tests_data.py  osqp_tester.c
configure/: osqp_configure.h.in
include/: CMakeLists.txt  Makefile  algebra_matrix.h  algebra_vector.h  auxil.h  cmake_install.cmake  constants.h  cs.h  csc.h  ctrl.h  ctrlc.h  error.h  glob_opts.h  kkt.h  ldl.h  ldl.h.gch  ldl_interface.h  lin_alg.h  lin_sys.h  linalg.h  linsys.h  ops.h  osqp.h  osqp_api_constants.h  osqp_api_functions.h  osqp_api_types.h  params.h  polish.h  proj.h  qp.h  qptypes.h  scaling.h  timer.h  types.h  unittest.h  util.h
ldl/: Makefile  ldl.c  ldl.h  ldl_interface.c  ldl_interface.h  test.c
lin_sys/: CMakeLists.txt  Makefile  cmake_install.cmake
lin_sys/direct/: CMakeLists.txt  Makefile  cmake_install.cmake
lin_sys/direct/kkt_common/: Makefile  cmake_install.cmake  kkt.c
lin_sys/direct/qdldl/: Makefile  cmake_install.cmake  qdldl_interface.c  qdldl_interface.h
lin_sys/direct/qdldl/qdldl_sources/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  qdldl-targets.cmake
linalg/: linalg.c
pcg/: pcg.c  pcg_interface.c  pcg_interface.h
src/: CMakeLists.txt  Makefile  auxil.c  cmake_install.cmake  cs.c  csc.c  ctrl.c  ctrlc.c  error.c  kkt.c  ldl_interface.c  lin_alg.c  lin_sys.c  linalg.c  linsys.c  osqp.c  osqp_api.c  polish.c  proj.c  qp.c  (+3 more)
(+173 files in other folders)
